# decnum

./: Cargo.toml  README.md  idk.bash
benches/: lib.rs
src/: :w  \  base.rs  bcd.rs  conv.rs  ctx.rs  dec128.rs  decnumber.rs  dpd.rs  inteldfp.rs  intrinsics.rs  itoa.rs  lib.rs  macros.rs  tables.rs  uint96.rs  util.rs
src/bid/: arith.rs  arith113.rs  arith128.rs  arith32.rs  arith64.rs  atod.rs  base.rs  bid128.rs  bid32.rs  bid64.rs  dtoa.rs  mod.rs  uint256.rs  util.rs
src/bid/arith/: arith128.rs  arith32.rs  arith64.rs  idiv.rs  mod.rs  uint256.rs  util.rs
src/dectest/: mod.rs  op.rs  parse.rs
src/dpd/: bcd.rs  dec128.rs  dpd.rs  dpd128.rs  dpd64.rs  encoding.rs  macros.rs  mod.rs  tables.rs
