[package]
name = "rdfp"
version = "0.1.0"
edition = "2021"
description = """
  Pure Rust implementation of IEEE 754-2008 decimal floating
  point numbers.
"""
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ericlagergren/decnum"
keywords = [
	"decimal",
	"dfp",
	"decnumber"
]
categories = [
	"no-std",
	"no-std::no-alloc",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }

[features]
default = [
	"std", # TODO
]

# Enable `alloc`.
alloc = []

# For internal use only.
bench = []

# Use lookup tables for DPD conversions.
dpd-tables = []

# Enable `rand`.
rand = ["dep:rand"]

# Enable `std`.
std = ["alloc"]

# TODO
slow-128 = []

# Enable slow tests.
slow-tests = []

[dependencies]
bitflags = { version = "2.6.0", default-features = false }
cfg-if = { version = "1.0.0", default-features = false }
itoa = { version = "1.0.11", default-features = false }
rand = { version = "0.8.5", default-features = false, optional = true }

[dev-dependencies]
rdfp = { path = ".", features = ["rand", "std"] }

anyhow = { version = "1.0.86" }
hex = { version = "0.4.3" }

# For benchmarks.
criterion = { version = "0.4" }
itoa = { version = "1.0.11" }
rand = { version = "0.8.5" }
ruint = { version = "1.12.3" }

dec = { version = "0.4.9" }
decnumber-sys = { version = "0.1.6" }
inteldfp = { path = "/Users/eric/git/inteldfp" }

[patch.crates-io]
decnumber-sys = { path = "/Users/eric/git/rust-dec/decnumber-sys" }

[[bench]]
name = "lib"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-all-features]
always_include_features = [
	"alloc",
	"rand",
	"std",
]
